homework_part_1/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: minimal_service_metadata
  namespace: testing
  labels:
    app: minimal_service_app
spec:
  selector:
    matchLabels:
      app: minimal_service_app
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: minimal_service_app
    spec:
      containers:
        - image: cottoffeus/minimal_service
          name: minimal_service
          ports:
            - containerPort: 8000

#          imagePullPolicy: Always|IfNotPresent|Never
#          readinessProbe:
#            httpGet:
#              path: /
#              port: 5678
#            initialDelaySeconds: 5
#            periodSeconds: 20
