homework_part_1/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minimal-service-ingress
  namespace: testing
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: arch.homework
      http:
        paths:
          - backend:
              service:
                name: minimal-service
                port:
                  number: 777
            pathType: Prefix
            path: /
